solve the interview section dinamicaly

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
 
-    <section id="emptySection" class="hidden mb-[50px]">
+    <section id="emptySection" class="hidden mb-[50px] bg-white shadow-md p-8 rounded-md mt-10">
       <div class=" text-center justify-center mt-20">
         <img class="justify-center mx-auto" src="jobs.png" alt="">
         <h1 class="text-4xl font-bold">No jobs available</h1>
