added to redme file and make responsive website

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body class="bg-[#F8FAFC] w-[80%] mx-auto">
   <header>
-    <h1 class="text-5xl font-bold mt-[60px] mb-6">Job Application Tracker</h1>
-    <div class="grid grid-cols-3 gap-6">
+    <h1 class="text-4xl font-bold mt-[60px] mb-6">Job Application Tracker</h1>
+    <div class="grid md:grid-cols-3 gap-6">
       <div class="bg-white shadow-xs p-3 rounded-md font-semibold">
         <p class="text-gray-600">Total</p>
         <p id="totalCount">0</p>
