i answered first question and trying solve another question

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body class="bg-[#F8FAFC] w-[80%] mx-auto">
+<body class="bg-gray-100 w-[80%] mx-auto">
   <header>
     <h1 class="text-4xl font-bold mt-[60px] mb-6">Job Application Tracker</h1>
     <div class="grid md:grid-cols-3 gap-6">
@@ -58,7 +58,7 @@
     </section>
 
 
-    <section id="emptySection" class="hidden mb-[50px] bg-white shadow-md p-8 rounded-md mt-10">
+    <section id="emptySection" class="hidden mb-[50px] bg-white shadow-xs p-8 rounded-md mt-8">
       <div class=" text-center justify-center mt-20">
         <img class="justify-center mx-auto" src="jobs.png" alt="">
         <h1 class="text-4xl font-bold">No jobs available</h1>
