solved some mistake with responsive

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body class="bg-gray-100 w-[80%] mx-auto">
   <header>
-    <h1 class="text-4xl font-bold mt-[60px] mb-6">Job Application Tracker</h1>
-    <div class="grid md:grid-cols-3 gap-6">
+    <h1 class="sm:text-xl md:text-4xl font-bold mt-[60px] mb-6 grid xs:grid-cols-1">Job Application Tracker</h1>
+    <div class="grid xs:grid-cols-1 md:grid-cols-3 gap-6">
       <div class="bg-white shadow-xs p-3 rounded-md font-semibold">
         <p class="text-gray-600">Total</p>
         <p id="totalCount">0</p>
@@ -311,7 +311,7 @@
               class="rejectBtn border-2 border-red-500 px-4 py-1 rounded-md text-red-500 font-semibold">REJECTED</button>
           </div>
         </div>
-        <!-- main part 2 -->
+
         <div class="right">
           <button id="delete" class="deleteBtn w-[60px] h-[60px] rounded-[50%] bg-white shadow-sm"><i
               class="fa-regular fa-trash-can"></i></button>
@@ -321,7 +321,7 @@
     </section>
 
   </main>
-  <!-- <script src="script.js"></script> -->
+
   <script src="index.js"></script>
 </body>
 
