i solved the all question in assainment

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body class="bg-gray-100 w-[80%] mx-auto">
   <header>
-    <h1 class="sm:text-xl md:text-4xl font-bold mt-[60px] mb-6 grid xs:grid-cols-1">Job Application Tracker</h1>
-    <div class="grid xs:grid-cols-1 md:grid-cols-3 gap-6">
+    <h1 class="sm:text-xl md:text-4xl font-bold mt-[60px] mb-6 grid s:grid-cols-1">Job Application Tracker</h1>
+    <div class="grid md:grid-cols-3 gap-6">
       <div class="bg-white shadow-xs p-3 rounded-md font-semibold">
         <p class="text-gray-600">Total</p>
         <p id="totalCount">0</p>
@@ -33,7 +33,7 @@
     </div>
   </header>
   <hr class="my-5 text-gray-300">
-  <main id="main-section">
+  <main id="main-section" class="xs:text-xl ">
     <div class="flex justify-between">
       <h1 class="text-lg font-semibold mb-4">Available Jobs</h1>
       <div class="flex gap-2">
@@ -67,7 +67,7 @@
     </section>
 
 
-    <section id="allCards" class="mt-10 space-y-8">
+    <section id="allCards" class="mt-10 space-y-8  min-w-dvh">
       <!-- card-1 -->
       <div class="card flex justify-between bg-white shadow-xs p-8 rounded-md">
         <!-- main part 1 -->
