change the responsive style

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </section>
 
 
-    <section id="allCards" class="mt-10 space-y-8  min-w-dvh">
+    <section id="allCards" class="mt-10 space-y-8">
       <!-- card-1 -->
       <div class="card flex justify-between bg-white shadow-xs p-8 rounded-md">
         <!-- main part 1 -->
